# langchain-workspace

ch01/: README.md  main.py  pyproject.toml
ch01/python_tutorial/: 01_data_type.py  02_if.py  03_for.py  04_while.py  05_func.py  06_file_io.py  07_with.py  08_except.py  09_f-string.py  10_class.py  11_module.py  12_decorator.py  13_sync.py  14_async.py  15_pydantic.py  16_generator.py  17_generator.py  calc_add.py  example_basic.txt
ch02/: main.py  pyproject.toml
ch02/sec01/: llm_api.py
ch02/sec02/: 01_persona.py  02_zeroshot.py  03_one_shot.py  04_few_shot.py  05_cot.py  06_zero_shot_cot.py
ch02/sec03/: 01_single_turn.py  02_multi_turn.py
ch02/sec04/: 02_calc_calories.py
ch03/: main.py  pyproject.toml
ch03/sec01/: 01_langchain_gemini.ipynb  02_temperature.ipynb  03_prompt_template.ipynb  04_lcel.ipynb  05_output_parser.ipynb
ch03/sec02/: 01_models.ipynb  02_messages.ipynb
ch03/sec03/: 01_streamlit.py  02_streamlit_langchain.py  03_streamlit_langchain_lcel.py  04_streamlit_langchain_sidebar.py
ch04/: main.py  pyproject.toml
ch04/sec01/: 01_agents.ipynb  02_agent_calc.ipynb
ch04/sec02/: 01_short_term_memory.ipynb
ch04/sec03/: 01_word_chain_game.ipynb
